@@ -382,13 +382,17 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
         DECLARE @VWIKI_ID int \
         DECLARE @TOPIC_TYPE1 int \
         DECLARE @TOPIC_TYPE2 int \
+        DECLARE @NAMESPACE_START int \
+        DECLARE @NAMESPACE_END int \
         SET @VWIKI_ID = ? \
         SET @TOPIC_TYPE1 = ? \
         SET @TOPIC_TYPE2 = ? \
+        SET @NAMESPACE_START = ? \
+        SET @NAMESPACE_END = ? \
         SET @LIMIT = ? \
         SET @OFFSET = ? \
         SET @TOP = @LIMIT \
-        SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_type in (@TOPIC_TYPE1, @TOPIC_TYPE2) and delete_date is null) \
+        SET @COUNT = (select count(*) from jam_topic where virtual_wiki_id = @VWIKI_ID and topic_type in (@TOPIC_TYPE1, @TOPIC_TYPE2) and namespace_id >= NAMESPACE_START and namespace_id <= NAMESPACE_END and delete_date is null) \
         IF (@OFFSET > @COUNT) SET @OFFSET = @COUNT \
         IF (@COUNT < @OFFSET + @LIMIT) SET @TOP = @COUNT - @OFFSET \
         SET @INNERCOUNT = @OFFSET + @LIMIT \
@@ -397,6 +401,8 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
                       select top @INNERCOUNT topic_name, topic_id \
                       from jam_topic where virtual_wiki_id = @VWIKI_ID \
                        and topic_type in (@TOPIC_TYPE1, @TOPIC_TYPE2) \
+                       and jam_topic.namespace_id >= @NAMESPACE_START \
+                       and jam_topic.namespace_id <= @NAMESPACE_END \
                        and delete_date is null \
                       order by topic_name \
                    ) a \
