@@ -84,6 +84,8 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
         from jam_topic \
         where virtual_wiki_id = ? \
         and topic_type in (?, ?) \
+        and jam_topic.namespace_id >= ? \
+        and jam_topic.namespace_id <= ? \
         and delete_date is null \
         order by topic_name \
         fetch first {0} rows only \
